--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -9,7 +9,7 @@
     background-color: rgba(0,0,0,.5)
 #quote
     background-color: rgba(0,0,0,.5)
-.todo
+#todo
     background-color: rgba(0,0,0,.5)
 
 
