--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -5,13 +5,20 @@
     z-index: -1  
     background-size: contain
     background-position: center
+
 #weather
     background-color: rgba(0,0,0,.5)
+    width: 10rem
 #quote
     background-color: rgba(0,0,0,.5)
 #todo
     background-color: rgba(0,0,0,.5)
-
+    width: 30rem
+input[type=text] 
+    color: black
+    
+        
+    
 
 
     //http://68.media.tumblr.com/35d253bffd4076839949ddf1ad95117b/tumblr_orseemGg6o1slhhf0o1_1280.jpg
